# mimi

./: .gitignore  AUDIT-REPORT.md  CHANGELOG.md  CODEGEN_TEST_FRAMEWORK.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  clippy.toml  libnull.rlib
benches/: codegen.rs  interp.rs  parser.rs
demos/: README.md  test_adt_fix.mimi  test_closure_call.mimi  test_for_fix.mimi  test_list_assign.mimi  test_result_match.mimi  test_scope_fix.mimi  test_time.mimi
demos/c_ffi_layer/: CMakeLists.txt  Makefile  bindings.cmake  bindings.cpp  libstrutil.c  mimi_ffi.h  strutil.mimi  test_strutil.py
demos/contract_ffi/: CMakeLists.txt  Makefile  bindings.cmake  bindings.cpp  contracts_simple.mimi  mimi_ffi.h  test_contracts.py  test_contracts_invalid.py
demos/python_ffi/: CMakeLists.txt  Makefile  bindings.cmake  bindings.cpp  math.mimi  mimi_ffi.h  test_math.py
demos/rust_ffi/: CMakeLists.txt  Cargo.toml  Makefile  bindings.cmake  bindings.cpp  mimi_ffi.h  rust_functions.mimi  test_rust_ffi.py
demos/rust_ffi/src/: lib.rs
docs/: comprehensive-gap-audit.md  ecosystem-priorities.md  ffi-glue.md  ffi-ownership-abi-implementation-summary.md  ffi-ownership-abi-roadmap.md  future-vision.md  idd-guide.md  mimi-issues.md  mimi.md  mimispec-dependency-audit.md  syntax-reference.md
examples/: actor_full_test.mimi  cap_test.mimi  error_propagation_test.mimi  ffi_verification.mimi  guess.mimi  json_parser.mimi  nested_on_failure_test.mimi  on_failure_test.mimi  parasteps_on_failure_test.mimi  try_operator.mimi  validation_basics.mimi  validation_collections.mimi  validation_concurrency.mimi  validation_contracts.mimi  validation_ffi.mimi  validation_package_management.mimi  wc.mimi
gramma/: mimi-grammar-v1.0.0-rc.md
migrate-mingling/: Cargo.toml  README.md
migrate-mingling/src/: main.rs
migrate-mingling/src/commands/: stats.rs
migrate-mingling/src/errors/: mod.rs
migrate-mingling/src/resources/: mod.rs
readme/: 00-index.md  01-syntax.md  02-types.md  03-memory.md  04-concurrency.md  05-error-handling.md  06-modules.md  07-cli.md  08-examples.md  09-mms-integration.md  10-ffi.md  llmprompt.md
scripts/: fuzz-dual-path.sh  mms-consistency.sh  run-ci-matrix.sh  setup-llvm-wrapper.sh  test-ffi-contracts.sh
src/: ast.rs  contracts.rs  core.rs  doc_core.rs  error.rs  fmt.rs  interp.rs  lexer.rs  lib.rs  lint.rs  loader.rs  lockfile.rs  lsp.rs  main.rs  manifest.rs  parser.rs  pkg_registry.rs  pkg_resolve.rs  safe_arith.rs  span.rs  tests.rs  verifier.rs
std/: collections.mimi  crypto.mimi  csv.mimi  datetime.mimi  env.mimi  (+17 more)
(+378 files in other folders)
